--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ file(GLOB xml_lib "lib/xml_parser/*.cpp" "lib/xml_parser/*h")
 file(GLOB qt_rel "Interface/*.h")
 
 set(SOURCE_FILES main.cpp utils/ImageTree.h utils/MyImage.h utils/DWTUtil.cpp utils/DWTUtil.h utils/DWT.h model/Watermark_Plugin.h
-        model/DWTDugad.h utils/MyImage.cpp model/Signature.h model/DWTDugad.cpp utils/ImageUtil.h
+        model/DWTDugad.h model/Signature.h model/DWTDugad.cpp
         utils/ProjectException.h utils/ParserUtil.h ${xml_lib} model/Model.h Controllers/SimpleController.h Controllers/Controller.h Views/View.h
         Interface/menu.cpp Interface/creation.cpp Interface/validation.cpp Interface/makewm.cpp
         ${qt_rel}
